feat: integrate field-level validation for forms with comprehensive documentation
- Added server-side validation using `go-playground/validator` for backend form submissions, supporting rules like `required`, `email`, `url`, `min`, `max`, and custom patterns.
- Implemented field-level error handling in the frontend, ensuring validation messages are displayed directly under the relevant fields using `react-hook-form`.
- Standardized error response format for validation errors, including HTTP `422 Unprocessable Entity` status.
- Enhanced documentation with a new `Validation.md` file detailing the validation flow, supported rules, and i18n integration for error messages.
- Updated localization files to include new validation message keys in both Turkish and English.
- Conducted tests to validate the new functionality across handler tests for resource creation and updates.

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -32,6 +32,19 @@ form:
   tooShort: "Too short"
   tooLong: "Too long"
 
+validation:
+  required: "{{.Field}} is required"
+  email: "Please enter a valid email address"
+  url: "Please enter a valid URL"
+  min: "{{.Field}} must be at least {{.Min}}"
+  max: "{{.Field}} must be at most {{.Max}}"
+  minLength: "{{.Field}} must be at least {{.Length}} characters"
+  maxLength: "{{.Field}} must be at most {{.Length}} characters"
+  pattern: "{{.Field}} format is invalid"
+  unique: "{{.Field}} has already been taken"
+  exists: "Selected {{.Field}} is invalid"
+  invalid: "Invalid value"
+
 # Navigation
 navigation:
   dashboard: "Dashboard"
